Bug fix: transparency covers entire screen

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 body {
   font-family: Arial, Helvetica, sans-serif;  
   font-size: 11pt;
-  height: 100%;
+  min-height: 100%;
 }
 
 input[type="password"], input[type="text"], input[type="email"] {
